fix overflowing input (#10147)

--- a/packages/augur-simplified/src/modules/market/trading-form.styles.less
+++ b/packages/augur-simplified/src/modules/market/trading-form.styles.less
@@ -409,6 +409,8 @@
     outline: 0;
     flex: 1;
     padding: @size-16 @size-12;
+    margin-right: @size-80;
+    padding-right: 0;
     padding-left: 0;
 
     &:focus {
